// Package keeper implements the Benchmark module keeper.
//
// This file contains proto.Message stub implementations for event types.
// TODO: Replace with generated protobuf code when available.
package keeper

// Proto stub methods for AnomalyDetectedEvent
func (*AnomalyDetectedEvent) ProtoMessage()  {}
func (*AnomalyDetectedEvent) Reset()         {}
func (*AnomalyDetectedEvent) String() string { return "AnomalyDetectedEvent" }

// Proto stub methods for AnomalyResolvedEvent
func (*AnomalyResolvedEvent) ProtoMessage()  {}
func (*AnomalyResolvedEvent) Reset()         {}
func (*AnomalyResolvedEvent) String() string { return "AnomalyResolvedEvent" }

// Proto stub methods for ProviderFlaggedEvent
func (*ProviderFlaggedEvent) ProtoMessage()  {}
func (*ProviderFlaggedEvent) Reset()         {}
func (*ProviderFlaggedEvent) String() string { return "ProviderFlaggedEvent" }

// Proto stub methods for ProviderUnflaggedEvent
func (*ProviderUnflaggedEvent) ProtoMessage()  {}
func (*ProviderUnflaggedEvent) Reset()         {}
func (*ProviderUnflaggedEvent) String() string { return "ProviderUnflaggedEvent" }

// Proto stub methods for ChallengeRequestedEvent
func (*ChallengeRequestedEvent) ProtoMessage()  {}
func (*ChallengeRequestedEvent) Reset()         {}
func (*ChallengeRequestedEvent) String() string { return "ChallengeRequestedEvent" }

// Proto stub methods for ChallengeCompletedEvent
func (*ChallengeCompletedEvent) ProtoMessage()  {}
func (*ChallengeCompletedEvent) Reset()         {}
func (*ChallengeCompletedEvent) String() string { return "ChallengeCompletedEvent" }

// Proto stub methods for ChallengeExpiredEvent
func (*ChallengeExpiredEvent) ProtoMessage()  {}
func (*ChallengeExpiredEvent) Reset()         {}
func (*ChallengeExpiredEvent) String() string { return "ChallengeExpiredEvent" }

// Proto stub methods for BenchmarksSubmittedEvent
func (*BenchmarksSubmittedEvent) ProtoMessage()  {}
func (*BenchmarksSubmittedEvent) Reset()         {}
func (*BenchmarksSubmittedEvent) String() string { return "BenchmarksSubmittedEvent" }

// Proto stub methods for BenchmarksPrunedEvent
func (*BenchmarksPrunedEvent) ProtoMessage()  {}
func (*BenchmarksPrunedEvent) Reset()         {}
func (*BenchmarksPrunedEvent) String() string { return "BenchmarksPrunedEvent" }

// Proto stub methods for ReliabilityScoreUpdatedEvent
func (*ReliabilityScoreUpdatedEvent) ProtoMessage()  {}
func (*ReliabilityScoreUpdatedEvent) Reset()         {}
func (*ReliabilityScoreUpdatedEvent) String() string { return "ReliabilityScoreUpdatedEvent" }
